Grosse MAJ des vacances

--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 
 		.logo {
 			height: 75px;
-			width: 75px;
-			background-image: url(logo.jpg);
+			width: 150px;
+			margin: 5px;
+			background-image: url(photos/logo.png);
 			background-size: cover;
 		}
 
@@ -49,13 +50,32 @@
 			background-color: #FF8D1B;
 		}
 
-		.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-			color: #fff;
-			background-color: #212121;
+		.navbar-default .navbar-nav > .active > a,
+		.navbar-default .navbar-nav > .active > a:hover,
+		.navbar-default .navbar-nav > .active > a:focus {
+		color: #212121;
+		background-color: #E9E9E9;
 		}
 
 		.navbar-default {
 			border-color: none;
+			border-radius: 0;
+			border: 0;
+		}
+
+		.navbar-default .navbar-nav {
+		padding-left: 15%;
+		}
+
+		.navbar-default .navbar-nav > li {
+			width: 150px;
+			text-align: center;
+		}
+
+		.navbar-default .navbar-nav > li > a:hover,
+		.navbar-default .navbar-nav > li > a:focus {
+		color: #212121;
+		background-color: #E9E9E9;
 		}
 
 
@@ -234,6 +254,11 @@
 			width: 100%
 		}
 
+		#vertical > li:hover {
+			background-color: #FF8D1B;
+			color: #212121;
+		}
+
 		#sidelink {
 			height: 100%;
 		}
@@ -307,13 +332,12 @@
 		FEATURED MOVIES AND SERIES
 		!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
-		#section1 {
+		#five-first-movie {
 			margin-top: 50px;
 		}
 
 		.title-section {
 			border-left: 3px solid #FF8D1B;
-			margin-left: 30px;
 			padding: 10px;
 			height: 50px;
 		}
@@ -331,97 +355,101 @@
 		}
 
 		.featured-bar {
+			padding-left: 0;
+		}
+
+		.featured-bar-elements {
 			display: inline-block;
 		}
 
-		.movie-series-box {
-			width: 190px;
-			text-align: center;
+.movie-series-box {
+	width: 190px;
+	text-align: center;
 
-		}
+}
 
-		.movie-series-affiche {
-			width: 170px;
-			height: 250px;
-		}
+.movie-series-affiche {
+	width: 170px;
+	height: 250px;
+}
 
-		.movie-series-title {
-			font-weight: bold;
-		}
+.movie-series-title {
+	font-weight: bold;
+}
 
-		.movie-series-categorie {
-			float: left;
-			font-weight: bold;
-		}
+.movie-series-categorie {
+	float: left;
+	font-weight: bold;
+}
 
-		.movie-series-years {
-			float:right;
-		}
+.movie-series-years {
+	float:right;
+}
 
-		.btnsMoreLess {
-			width: 130px;
-			margin-left: auto;
-			margin-right: auto;
-		}
+.btnsMoreLess {
+	width: 130px;
+	margin-left: auto;
+	margin-right: auto;
+}
 
-		.moreMoviesBtn {
-			background-color: #FF8D1B;
-			width: 130px;
-			height: 35px;
-			text-align: center;
-			font-weight: bold;
-			color: #FFF;
-			margin-bottom: 20px;
-			border-radius: 0;
-		}
+.moreMoviesBtn {
+	background-color: #FF8D1B;
+	width: 130px;
+	height: 35px;
+	text-align: center;
+	font-weight: bold;
+	color: #FFF;
+	margin-bottom: 20px;
+	border-radius: 0;
+}
 
-		.lessMoviesBtn {
-			background-color: #FF8D1B;
-			width: 130px;
-			height: 35px;
-			text-align: center;
-			font-weight: bold;
-			color: #FFF;
-			margin-bottom: 20px;
-			border-radius: 0;
-		}
+.lessMoviesBtn {
+	background-color: #FF8D1B;
+	width: 130px;
+	height: 35px;
+	text-align: center;
+	font-weight: bold;
+	color: #FFF;
+	margin-bottom: 20px;
+	border-radius: 0;
+}
 
-		.moreMoviesBox {
-			display: none;
-			margin-top: 20px;
-		}
+.moreMoviesBox {
+	display: none;
+	margin-top: 20px;
+}
 
 
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 		FEATURED SERIES
-		!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
-		.moreSeriesBtn {
-			background-color: #FF8D1B;
-			width: 130px;
-			height: 35px;
-			text-align: center;
-			font-weight: bold;
-			color: #FFF;
-			margin-bottom: 20px;
-			border-radius: 0;
-		}
+.moreSeriesBtn {
+	background-color: #FF8D1B;
+	width: 130px;
+	height: 35px;
+	text-align: center;
+	font-weight: bold;
+	color: #FFF;
+	margin-bottom: 20px;
+	border-radius: 0;
+}
 
-		.moreSeriesBox {
-			display: none;
-			margin-top: 20px;
-		}
+.moreSeriesBox {
+	display: none;
+	margin-top: 20px;
+}
 
-		.lessSeriesBtn {
-			background-color: #FF8D1B;
-			width: 130px;
-			height: 35px;
-			text-align: center;
-			font-weight: bold;
-			color: #FFF;
-			margin-bottom: 20px;
-			border-radius: 0;
-		}
+.lessSeriesBtn {
+	background-color: #FF8D1B;
+	width: 130px;
+	height: 35px;
+	text-align: center;
+	font-weight: bold;
+	color: #FFF;
+	margin-bottom: 20px;
+	border-radius: 0;
+}
 
 		.twitter-contactBox {
 			background-color: #33CCFF;
@@ -442,7 +470,7 @@
 		!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
 		#descriptionTrailer {
-			width: 552px;
+			width: 550px;
 			height: 300px;
 			background-color: #FF8D1B;
 		}
@@ -451,28 +479,26 @@
 			list-style: none;
 		}
 
+		#trailerBox {
+
+		}
+
+		#shopID {
+		}
+
 		#test {																																				/* TEST HERE */
-			margin-left: -31px;
+			margin-left: -30px;
 		}
 
 		#shopControllers {
 			position: relative;
 			width: 50px;
-			left: 93.5%;
-			bottom: 330px;
-		}
-
-		.shop-right-icon, .shop-left-icon {
-			color: white;
-			background-color: black;
+			left: 90%;
+			bottom: 20px;
 		}
 
 		.shopControl {
 			background-color: black;
-		}
-
-		.movie-series-affiche {
-			cursor: pointer;
 		}
 
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -594,14 +620,14 @@
 			float: left;
 			margin-left: -75px;
 			padding-left: 5px;
-			padding-right: 15px;
+			padding-right: 10px;
 			border-top-right-radius: 30px;
 			border-bottom-right-radius: 30px;
 			color: white;
 			font-weight: bold;
 			height: 45px;
-			width: 120px;
-			line-height: 40px;
+			width: 125px;
+			line-height: 45px;
 			transition: margin-left 0.5s;
 			z-index: 5;
 		}
@@ -625,6 +651,7 @@
 		#googleplus {
 			margin-top: 300px;
 		}
+
 
 
 		.leftmedia {
@@ -664,8 +691,12 @@
 			border-radius: 50px;
 		}
 
-		@media only screen and (max-width: 768px) {
-			.position {
-				visibility: hidden;
-			}
-		}
+
+		/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+				MODAL FIVE MOVIES
+				!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
+.modalMovie-description {
+
+	border-radius: 5px;
+}
